// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL kVLURz"
  >
    <div
      className="sc-bcXGCL kVLURz"
    >
      <a
        className="sc-bcXGCL bLpBVV cap-link"
        href="/projects"
      >
        Project list
      </a>
      <span
        className="sc-bcXGCL lfcOKv cap-text"
      >
        /
      </span>
    </div>
    <div
      className="sc-bcXGCL kVLURz"
    >
      <p
        className="sc-bcXGCL jcAoAB cap-text"
      >
        New Project
      </p>
    </div>
  </div>,
]
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL kVLURz"
  >
    <div
      className="sc-bcXGCL kVLURz"
    >
      <p
        className="sc-bcXGCL jcAoAB cap-text"
      >
        Project list
      </p>
    </div>
  </div>,
]
`;
